[gd_scene load_steps=8 format=3 uid="uid://bickn2dgve6m8"]

[ext_resource type="FontFile" uid="uid://b4pqfbvte11k6" path="res://Assets/Assets/VT323-Regular.ttf" id="1_6owsf"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_jettw"]
[ext_resource type="AudioStream" uid="uid://wteog7wbeowr" path="res://Assets/Assets/GameLost.wav" id="3_xd6wp"]
[ext_resource type="AudioStream" uid="uid://ciruvni3r72k3" path="res://Assets/Assets/GameWin.wav" id="4_wcho0"]
[ext_resource type="AudioStream" uid="uid://3gko62lj04pt" path="res://Assets/Assets/Level Passed.wav" id="5_3cely"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwsea"]
bg_color = Color(0.74902, 0.494118, 0.760784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sfwbs"]
bg_color = Color(0.407843, 0.631373, 0.776471, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jettw")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_6owsf")
theme_override_font_sizes/font_size = 32
text = "Lifes: 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hwsea")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE LOST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART GAME"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sfwbs")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE WON THE LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "GO TO NEXT LEVEL"

[node name="GameLost" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xd6wp")

[node name="GameWon" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wcho0")

[node name="LevelPassed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3cely")

[node name="GameWonContainer2" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameWonContainer2"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sfwbs")

[node name="VBoxContainer" type="VBoxContainer" parent="GameWonContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameWonContainer2/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE WON THE LEVEL"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
